// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for <Icon /> Test the accessibilty of <Icon /> should match SnapShot 1`] = `
<Icon
  append={false}
  ariaLabel={null}
  buttonClassName=""
  buttonProps={null}
  className=""
  color=""
  description="This is a test description"
  name="accessibility_16"
  onClick={null}
  prepend={false}
  size={null}
  sizeOverride={false}
  style={null}
  title="Test Title"
  type=""
>
  <i
    aria-label="Test Title This is a test description"
    className="md-icon icon icon-accessibility_16"
    style={
      Object {
        "fontSize": 16,
      }
    }
    title="Test Title"
  />
</Icon>
`;

exports[`Tests for <Icon /> Test the colors of <Icon /> should match SnapShot 1`] = `
<Icon
  append={false}
  ariaLabel={null}
  buttonClassName=""
  buttonProps={null}
  className=""
  color=""
  description=""
  name="accessibility_16"
  onClick={null}
  prepend={false}
  size={null}
  sizeOverride={false}
  style={null}
  title=""
  type=""
>
  <i
    aria-label={null}
    className="md-icon icon icon-accessibility_16"
    style={
      Object {
        "fontSize": 16,
      }
    }
  />
</Icon>
`;

exports[`Tests for <Icon /> Test the sizes of <Icon /> should match SnapShot 1`] = `
<Icon
  append={false}
  ariaLabel={null}
  buttonClassName=""
  buttonProps={null}
  className="testClass"
  color="red-50"
  description=""
  name="accessibility_16"
  onClick={null}
  prepend={false}
  size={24}
  sizeOverride={false}
  style={null}
  title=""
  type=""
>
  <i
    aria-label={null}
    className="md-icon icon icon-accessibility_16 testClass"
    style={
      Object {
        "color": "rgba(247, 100, 74, 1)",
        "fontSize": 24,
      }
    }
  />
</Icon>
`;

exports[`Tests for <Icon /> should match SnapShot 1`] = `
<Icon
  append={false}
  ariaLabel={null}
  buttonClassName=""
  buttonProps={null}
  className="testClass"
  color="blue-50"
  description=""
  name="accessibility_16"
  onClick={null}
  prepend={false}
  size={null}
  sizeOverride={false}
  style={null}
  title=""
  type=""
>
  <i
    aria-label={null}
    className="md-icon icon icon-accessibility_16 testClass"
    style={
      Object {
        "color": "rgba(0, 160, 209, 1)",
        "fontSize": 16,
      }
    }
  />
</Icon>
`;
